# trie

./: CMakeLists.txt
app/: main.cpp
code/: trie.cpp  trie.hpp
